<resources>
    <string name="app_name">BoxingIntervals</string>

    <string name="start_button_string">START</string>
    <string name="start_button_stop_string">STOP</string>
    <string name="settings_button_string">SETTINGS</string>

    <!-- Timer fragment strings -->
    <string name="timer_fragment_header_string">TIMER</string>

    <string name="timer_intervals_title_string">Intervals</string>

    <!-- Settings fragment strings -->
    <string name="settings_fragment_header_string">SETTINGS</string>
    <string name="settings_save_button_string">SAVE</string>
    <string name="settings_buffor_duration_string">Buffor duration</string>
    <string name="settings_intervals_string">Intervals amount</string>
    <string name="settings_intervals_duration_string">Intervals duration</string>
    <string name="settings_break_duration_string">Break duration</string>
    <string name="settings_value">Amount</string>
    <string name="settings_increase">+</string>
    <string name="settings_decrease">-</string>
    <string name="settings_button_timer_string">TIMER</string>
</resources>
